  ignorecase, fstype, hfsplussupport, wilddir, wildfile, regexdir,
  and regexfile thanks to Pruben Guldberg). See below for details.
- Restore of all files for a Job or set of jobs even if the file
  records have been removed from the catalog.
- Restore of a directory (non-recursive, i.e. only one level).
- Support for TLS (ssl) between all the daemon connections thanks
  to Landon Fuller.
- Any Volume in the Pool named Scratch may be reassigned to any
  other Pool when a new Volume is needed.
- You may clone a Job and thus write (almost) the same data
  to multiple Volumes simultaneously (see below). Actually, 
  any Job may start any other Job with this mechanism, so it
  also be used to group jobs.
- Unicode filename support for Win32 (thanks to Thorsten Engel)
- Volume Shadow Copy support for Win32 thus the capability to
  backup exclusively opened files (thanks to Thorsten Engel).
  A VSS enabled Win32 FD is available.  You must explicitly
  turn on VSS with "Enable VSS = yes" in your FileSet resource.
- New manual format with an index (thanks to Karl Cunningham).
- New Web site format (thanks to Michael Scherer).
- SQLite3 support, but it seems to run at 1/2 to 1/4 the speed of
  SQLite2.
- Web-bacula, previously a separate project by Juan Luis Frances,
  is now included in the Bacula GUI release (yet to be fully
  created).

New Directives:
- New Job directive "Prefer Mounted Volumes = yes|no" causes the
  SD to select either an Autochanger or a drive with a valid 
  Volume already mounted in preference. If none is available,
  it will select the first available drive.
- New Run directive in Job resource of DIR. It permits
  cloning of jobs.  To clone a copy of the current job, use
     Run = "job-name level=%l since=\"%s\""
  Note, job-name is normally the same name as the job that
  is running but there is no restriction on what you put. If you
  want to start the job by hand and use job overrides such as       