@@ -33,7 +33,7 @@ Major Changes:
   records have been removed from the catalog.
 - Restore of a directory (non-recursive, i.e. only one level).
 - Support for TLS (ssl) between all the daemon connections thanks
-  to Landon Fuller.
+  to Landon Fuller. This is mostly untested.
 - Any Volume in the Pool named Scratch may be reassigned to any
   other Pool when a new Volume is needed.
 - You may clone a Job and thus write (almost) the same data
@@ -159,7 +159,8 @@ Items to note!!!
 - When linking with --with-python, there are a few warnings that
   can be ignored.
 - You must either create a new catalog database or upgrade your
-  old database (the PostgreSQL upgrade scripts not yet tested).
+  old database.
+- The TLS code is for the most part untested.
 - You must add --with-openssl to the configure command line if
   you want TLS communications encryption support.
 - If you use an Autochanger, you *must* update your SD conf file
